<resources>
    <string name="app_name">MyListview</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="userId">账&#160;&#160;&#160;&#160;号</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="enter_userId">请输入账户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="remember_user">记住密码</string>
    <string name="lost_password">忘记密码</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="sign_up">注&#160;&#160;册</string>
    <string name="logic_view">这是自定义动态view</string>
</resources>
